--- a/about.html
+++ b/about.html
@@ -33,8 +33,7 @@
             saya tidak akan pernah berhenti belajar.</b>
         </p>
         <p>
-          <b>Saya ingin menguasai bahasa HTML, CSS, dan Javascript.
-            Simak video lengkap tentang saya.</b>
+          <b>Saya ingin menguasai bahasa HTML, CSS, dan PHP.</b>
         </p>
         <p>
             <video controls>
